--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 <!-- Rest of the HTML and JavaScript code remains the same -->
 <body>
     <header class="header">
-        <img src="https://i.ibb.co/r4v48Xd/logo-1.png" alt="Kavach Logo" class="logo">
+        <img src="https://i.ibb.co/XZVyCvLy/dsl-loco-op-ppt.png" alt="Kavach Logo" class="logo">
         <div class="header-content">
             <h1 class="header-title">IR AI Assistant</h1>
             <div class="header-subtitle">IRISET, Indian Railways</div>
