--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IR AI Assistant</title>
+    <title>AI Chatbot: LHB Maintenance Manual</title>
     <style>
         /* Previous styles remain the same until header */
         * {
