--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <header class="header">
         <img src="https://i.ibb.co/XZVyCvLy/dsl-loco-op-ppt.png" alt="Kavach Logo" class="logo">
         <div class="header-content">
-            <h1 class="header-title">IR AI Assistant</h1>
+            <h1 class="header-title">AI Chatbot: LHB Manual</h1>
             <div class="header-subtitle">IRISET, Indian Railways</div>
         </div>
     </header>
