--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
     <header class="header">
         <img src="https://i.ibb.co/XZVyCvLy/dsl-loco-op-ppt.png" alt="Kavach Logo" class="logo">
         <div class="header-content">
-            <h1 class="header-title">AI Chatbot: LHB Manual</h1>
-            <div class="header-subtitle">IRISET, Indian Railways</div>
+            <h1 class="header-title">Vande Bharat: AI Chatbot</h1>
+            <div class="header-subtitle">CoE, IRISET X ICF, Chennai - Indian Railways</div>
         </div>
     </header>
 
