--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
     <div class="welcome-container" id="welcomeContainer">
         <div class="welcome-text">
-            <span class="line">Get Instant responses from Vande Bharat AI Assistant.</span>
+            <span class="line">Get Instant responses from Vande Bharat Troubleshooting AI Assistant.</span>
             <span class="line">Enter your query and press Enter below to get started.</span>
         </div>
     </div>
