--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Chatbot: LHB Maintenance Manual</title>
+    <title>CoE Kavach AI Chatbot</title>
     <style>
         /* Previous styles remain the same until header */
         * {
@@ -195,8 +195,8 @@
     <header class="header">
         <img src="https://i.ibb.co/XZVyCvLy/dsl-loco-op-ppt.png" alt="Kavach Logo" class="logo">
         <div class="header-content">
-            <h1 class="header-title">Vande Bharat: AI Chatbot</h1>
-            <div class="header-subtitle">CoE, IRISET X ICF, Chennai - Indian Railways</div>
+            <h1 class="header-title">CoE Kavach AI Chatbot</h1>
+            <div class="header-subtitle">CoE - Kavach, IRISET</div>
         </div>
     </header>
 
@@ -221,7 +221,7 @@
     </div>
 
 <script>
-    const BASE_URL = 'https://script.google.com/macros/s/AKfycbwzH_EGCnEBcTf6bkHBdBPnlx_4D4NdWZvZGLRrtMr_G6Kx5QyyZzIPHFijum64KYF4/exec';
+    const BASE_URL = 'https://script.google.com/macros/s/AKfycbzffHkFiCPU9-usm6oARGp5qO85XPuVwL5zsT4fk-JxrSPUxW1e-AL54qEHsATbzrUaqg/exec';
     
     const chatContainer = document.getElementById('chatContainer');
     const userInput = document.getElementById('userInput');
